chage main image, replace reviews, delete clean window

--- a/app/parts/reviews.html
+++ b/app/parts/reviews.html
@@ -1,18 +1,26 @@
 <section class="reviews block" id="reviews">
     <div class="container">
-        <h2 data-aos-duration="1000" data-aos="fade-right">Opinie</h2>
-        <div class="swiper reviews-swiper">
-            <div class="reviews__navigation">
-                <div class="swiper-button-next reviews__button reviews__button--next"></div>
-                <div class="swiper-button-prev reviews__button reviews__button--prev"></div>
+        <div class="row justify-content-between align-items-center">
+            <div class="col-auto">
+<h2>Opinie</h2>
             </div>
+            <div class="col-auto">
+            <div class="reviews__navigation">
+                <div class="swiper-button-next reviews__button reviews__button--next btn"></div>
+                <div class="swiper-button-prev reviews__button reviews__button--prev btn"></div>
+            </div>
+            </div>
+        </div>
+        
+        <div class="swiper reviews-swiper">
+
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="review">
                         <div class="review__header">
-                            <div class="review__ava">M</div>
+                            <div class="review__ava">P</div>
                             <div>
-                                <div class="review__name">User name</div>
+                                <div class="review__name">Przemysław Mróz</div>
                                 <div class="review__rating rating"> <svg class="rating__star" width="16" height="16">
                                         <use xlink:href="#star"></use>
                                     </svg><svg class="rating__star" width="16" height="16">
@@ -26,7 +34,7 @@
                                     </svg></div>
                             </div>
                         </div>
-                        <div class="review__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut enim, eaque voluptas cupiditate, odio a, asperiores aperiam magnam libero cumque iste. Molestias, recusandae adipisci! Laudantium esse quasi dolore eveniet dolor.
+                        <div class="review__text">Kanapa wygląda jak nowa. Świetna robota!
                         </div>
                     </div>
                 </div>
@@ -35,7 +43,7 @@
                         <div class="review__header">
                             <div class="review__ava">К</div>
                             <div>
-                                <div class="review__name">User name</div>
+                                <div class="review__name">Konstanty Szewczyk</div>
                                 <div class="review__rating rating"> <svg class="rating__star" width="16" height="16">
                                         <use xlink:href="#star"></use>
                                     </svg><svg class="rating__star" width="16" height="16">
@@ -49,15 +57,15 @@
                                     </svg></div>
                             </div>
                         </div>
-                        <div class="review__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut enim, eaque voluptas cupiditate, odio a, asperiores aperiam magnam libero cumque iste. Molestias, recusandae adipisci! Laudantium esse quasi dolore eveniet dolor.</div>
+                        <div class="review__text">Fotele w aucie idealnie wyczyszczone.</div>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="review">
                         <div class="review__header">
-                            <div class="review__ava">L</div>
+                            <div class="review__ava">N</div>
                             <div>
-                                <div class="review__name">User name</div>
+                                <div class="review__name">Nataniel Ostrowski</div>
                                 <div class="review__rating rating"> <svg class="rating__star" width="16" height="16">
                                         <use xlink:href="#star"></use>
                                     </svg><svg class="rating__star" width="16" height="16">
@@ -71,15 +79,15 @@
                                     </svg></div>
                             </div>
                         </div>
-                        <div class="review__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut enim, eaque voluptas cupiditate, odio a, asperiores aperiam magnam libero cumque iste. Molestias, recusandae adipisci! Laudantium esse quasi dolore eveniet dolor.</div>
+                        <div class="review__text">Dywany czyste i pachnące. Na pewno wrócę.</div>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="review">
                         <div class="review__header">
-                            <div class="review__ava">F</div>
+                            <div class="review__ava">K</div>
                             <div>
-                                <div class="review__name">User name</div>
+                                <div class="review__name">Ksawery Król</div>
                                 <div class="review__rating rating"> <svg class="rating__star" width="16" height="16">
                                         <use xlink:href="#star"></use>
                                     </svg><svg class="rating__star" width="16" height="16">
@@ -93,16 +101,15 @@
                                     </svg></div>
                             </div>
                         </div>
-                        <div class="review__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut enim, eaque voluptas cupiditate, odio a, asperiores aperiam magnam libero cumque iste. Molestias, recusandae adipisci! Laudantium esse quasi dolore eveniet dolor.
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut enim, eaque voluptas cupiditate, odio a, asperiores aperiam magnam libero cumque iste. Molestias, recusandae adipisci! Laudantium esse quasi dolore eveniet dolor.👊</div>
+                        <div class="review__text">Tapicerka w aucie jak nowa. Imponująca praca!</div>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="review">
                         <div class="review__header">
-                            <div class="review__ava">J</div>
+                            <div class="review__ava">A</div>
                             <div>
-                                <div class="review__name">User name</div>
+                                <div class="review__name">Agata Kołodziej</div>
                                 <div class="review__rating rating"> <svg class="rating__star" width="16" height="16">
                                         <use xlink:href="#star"></use>
                                     </svg><svg class="rating__star" width="16" height="16">
@@ -116,18 +123,16 @@
                                     </svg></div>
                             </div>
                         </div>
-                        <div class="review__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut enim,
-                            eaque voluptas cupiditate, odio a, asperiores aperiam magnam libero cumque iste. Molestias,
-                            recusandae adipisci! Laudantium esse quasi dolore eveniet dolor.
+                        <div class="review__text">Zawsze profesjonalnie czyszczą meble.
                         </div>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="review">
                         <div class="review__header">
-                            <div class="review__ava">G</div>
+                            <div class="review__ava">M</div>
                             <div>
-                                <div class="review__name">User name</div>
+                                <div class="review__name">Martyna Zielińska</div>
                                 <div class="review__rating rating"> <svg class="rating__star" width="16" height="16">
                                         <use xlink:href="#star"></use>
                                     </svg><svg class="rating__star" width="16" height="16">
@@ -142,9 +147,31 @@
                             </div>
                         </div>
                         <div class="review__text">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut enim, eaque voluptas
-                            cupiditate, odio a, asperiores aperiam magnam libero cumque iste. Molestias, recusandae
-                            adipisci! Laudantium esse quasi dolore eveniet dolor.
+                            Meble bez plam, wyglądają świetnie.
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="review">
+                        <div class="review__header">
+                            <div class="review__ava">E</div>
+                            <div>
+                                <div class="review__name">Emil Wysocki</div>
+                                <div class="review__rating rating"> <svg class="rating__star" width="16" height="16">
+                                        <use xlink:href="#star"></use>
+                                    </svg><svg class="rating__star" width="16" height="16">
+                                        <use xlink:href="#star"></use>
+                                    </svg><svg class="rating__star" width="16" height="16">
+                                        <use xlink:href="#star"></use>
+                                    </svg><svg class="rating__star" width="16" height="16">
+                                        <use xlink:href="#star"></use>
+                                    </svg><svg class="rating__star" width="16" height="16">
+                                        <use xlink:href="#star"></use>
+                                    </svg></div>
+                            </div>
+                        </div>
+                        <div class="review__text">
+                            Tapicerka w starym aucie odświeżona perfekcyjnie.
                         </div>
                     </div>
                 </div>
