--- a/app/parts/promo.html
+++ b/app/parts/promo.html
@@ -9,7 +9,7 @@
               <source srcset="./images/dist/carpet-tablet.webp" type="image/webp" media="(max-width: 767px)">
               <source srcset="./images/dist/carpet-tablet.jpg" media="(max-width: 767px)"> -->
               <!-- <source srcset="./images/dist/carpet.webp" type="image/webp"> -->
-              <img class="clean-process__bg" src="./images/dist/carpet-2.jpg" alt=""></picture>
+              <img class="clean-process__bg" src="./images/dist/carpet.jpg" alt=""></picture>
             <picture>
               <source srcset="./images/dist/cleaner.webp" type="image/webp">
               <img class="clean-process__cleaner" src="./images/dist/cleaner.png" alt=""></picture>
